--- a/2110_character/index.html
+++ b/2110_character/index.html
@@ -20,12 +20,11 @@ http://www.tooplate.com/view/2110-character
 <body class="tm-bg-dark">
     <main class="tm-container masonry">
         <div class="item tm-bg-white tm-block tm-block-left" data-desktop-seq-no="1" data-mobile-seq-no="1">
-            <p class="tm-hero-text">&ldquo;Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                himenaeos. Maecenas vel lacinia ipsum, nec fermentum diam. Nulla nec gravida odio, eget vestibulum urna.&rdquo;</p>
+            <p class="tm-hero-text">&ldquo;“You may refer to me as Wichanard Kumsang, and my nickname is First Currently, I am pursuing my second year of undergraduate studies at the Faculty of Science and Technology, specializing in the field of Artificial Intelligence.”.&rdquo;</p>
             <header class="tm-block-brand">
                 <div class="tm-bg-primary-dark tm-text-white tm-block-brand-inner">
                     <i class="fas fa-braille fa-3x"></i>
-                    <h1 class="tm-brand-name">Character</h1>
+                    <h1 class="tm-brand-name">MY FAMILY</h1>
                 </div>
             </header>
         </div>
@@ -35,8 +34,7 @@ http://www.tooplate.com/view/2110-character
         <div class="item tm-bg-secondary tm-text-white tm-block tm-block-wider tm-block-pad tm-block-left-2" data-desktop-seq-no="3"
             data-mobile-seq-no="5">
             <i class="fas fa-award fa-4x tm-block-icon"></i>
-            <p>Maecenas scelerisque ex neque, vel ultrices purus pharetra sit amet. Donec consectetur ipsum in elit eleifend
-                porta. Morbi bibendum porttitor dui. Proin molestie purus non nisi blandit rutrum.</p>
+            <p>My go-to place for family vacations is a mountain temple. And I really like this place because of the quiet atmosphere..</p>
             <div class="tm-text-right">
                 <a href="#" class="tm-btn tm-btn-small tm-btn-primary tm-mt">Read More</a>
             </div>
@@ -61,9 +59,9 @@ http://www.tooplate.com/view/2110-character
                         Proin Molestie Purus Non
                     </h2>
                 </header>
-                <p>You can freely use this Character HTML Template for your site. Please <a href="https://www.facebook.com/tooplate">follow us</a> on Facebook page for updates. Don't forget to tell your friends about Tooplate. Thank you. :)</p>
-                <p class="tm-mt tm-mb-small">Aenean gravida augue luctus, egestas massa ac, hendrerit ipsum. Vestibulum et
-                    ex sollicitudin, commodo liqula suscipit, laoreet lacus.
+                <p>There are 4 people in my family: father, mother, grandmother,follow us but my grandmother lives in another province. <a href="https://www.facebook.com/tooplate">follow us</a> on Facebook page for updates. Don't forget to tell your friends about Tooplate. Thank you. :)</p>
+                <p class="tm-mt tm-mb-small">On holidays I often meet up with my grandmother and take her out regularly.
+My family likes to go on holidays to relax. And personally, I really like this activity. It keeps me energized during the holidays.
                 </p>
                 <!-- -->
             </div>
@@ -101,8 +99,7 @@ http://www.tooplate.com/view/2110-character
                     <header>
                         <h2>Proin imperdiet commodo nisi</h2>
                     </header>
-                    <p>Mauris sodales vulputate ante a dapibus Donec vitae maximus dolor, pharetra imperdiet lectus. Praesent
-                        pharetra elit ac est congue volutpat.</p>
+                    <p>I like to decorate cars in my free time. and go out for a drive at night..</p>
                 </div>
             </div>
         </div>
